# sinkhorn-mnist-knn

./: LICENSE  README.md  pyproject.toml  requirements.txt
notebooks/: sinkhorn_mnist_knn.ipynb
src/: distances.py  evaluation.py
